--- a/posts/2015-12-07-tu-quoque.markdown
+++ b/posts/2015-12-07-tu-quoque.markdown
@@ -1,6 +1,7 @@
 ---
 title: Tu Quoque
 author: Julius
+tags: haskell
 ---
 
 Vestibulum leo turpis, dignissim quis ultrices sit amet, iaculis ac ligula.
@@ -18,7 +19,7 @@ consequat viverra, nulla ante tristique est, a faucibus nisi enim nec dui. Donec
 metus ligula, condimentum at porttitor eget, lobortis at quam.
 
 Aenean vel libero in magna ultricies congue in a odio. Donec faucibus rutrum
-ornare. Fusce dictum eleifend fermentum. Vestibulum vel nibh a metus porttitor
+ornare. taFusce dictum eleifend fermentum. Vestibulum vel nibh a metus porttitor
 rhoncus. Pellentesque id quam neque, eget molestie arcu. Integer in elit vel
 neque viverra ultricies in eget massa. Nam ut convallis est. Pellentesque eros
 eros, sodales non vehicula et, tincidunt ut odio. Cras suscipit ultrices metus
