--- a/posts/2018-10-07-flyspell-correct-v0.5.org
+++ b/posts/2018-10-07-flyspell-correct-v0.5.org
@@ -16,7 +16,7 @@ Recently, there was a major release of version 0.5 with following changes:
 - Create a wrapper function for most of the cases, namely
   =flyspell-correct-wrapper=.
 - Implement a 'rapid mode' for =flyspell-correct-wrapper=, allowing user to fix
-  multiple words in one run (=skip= action can be used to skip current dispelled
+  multiple words in one run (=skip= action can be used to skip current incorrect
   word and continue to the next one).
 - Add some simple tests to cover the most important use cases.
 - Fix issue when =flyspell-correct-next= doesn't correct word at point.
