post about gifify

--- a/posts/2017-06-15-AppleScript-and-GitHub-API.org
+++ b/posts/2017-06-15-AppleScript-and-GitHub-API.org
@@ -1,6 +1,6 @@
 ---
 title: AppleScript and the GitHub API
-tags: applescript
+tags: applescript, macos
 ---
 
 AppleScript is a powerful scripting language that allows to directly control
