--- a/static/posts/2015-04-05-cabal-and-executables.org
+++ b/static/posts/2015-04-05-cabal-and-executables.org
@@ -1,6 +1,6 @@
 ---
 title: Cabal and executables
-keywords: haskell
+tags: haskell
 description: Simple script for installing exectuables from Hackage without running into cabal hell
 ---
 
