--- a/static/posts/2016-05-09-flyspell-correct-intro.org
+++ b/static/posts/2016-05-09-flyspell-correct-intro.org
@@ -1,6 +1,6 @@
 ---
 title: flyspell-correct
-keywords: emacs, release
+tags: emacs, release
 description: Announcement of flyspell-correct package for Emacs
 ---
 
