--- a/static/posts/2016-06-24-Spacemacs-and-different-emacs-versions.org
+++ b/static/posts/2016-06-24-Spacemacs-and-different-emacs-versions.org
@@ -1,6 +1,6 @@
 ---
 title: Using Spacemacs with several Emacs versions
-keywords: emacs, spacemacs
+tags: emacs, spacemacs
 description: Instructions on how to use Spacemacs with several Emacs versions at the same time
 ---
 
