--- a/static/posts/2016-12-20-Being-an-org-mode-addict.org
+++ b/static/posts/2016-12-20-Being-an-org-mode-addict.org
@@ -1,6 +1,6 @@
 ---
 title: Being an org-mode addict
-keywords: emacs, org-mode
+tags: emacs, org-mode
 description: Meaningfulness of trying to escape Org mode and Emacs
 ---
 
