--- a/static/posts/2017-06-15-AppleScript-and-GitHub-API.org
+++ b/static/posts/2017-06-15-AppleScript-and-GitHub-API.org
@@ -1,6 +1,6 @@
 ---
 title: AppleScript and the GitHub API
-keywords: applescript, macos
+tags: applescript, macos
 description: Using GitHub API from AppleScript
 ---
 
