--- a/static/posts/2018-10-13-gifify.org
+++ b/static/posts/2018-10-13-gifify.org
@@ -1,6 +1,6 @@
 ---
 title: High quality GIF from video
-keywords: shell, ffmpeg, utils
+tags: shell, ffmpeg, utils
 description: Tool for converting GIFs from video files
 ---
 
