--- a/static/posts/2018-11-04-revisiting-eru.org
+++ b/static/posts/2018-11-04-revisiting-eru.org
@@ -1,6 +1,6 @@
 ---
 title: Revisiting Eru
-keywords: shell
+tags: shell
 description: Overview of my computer configuration maintenance system
 ---
 
