--- a/static/posts/2019-06-26-google-calendar-and-gogol.org
+++ b/static/posts/2019-06-26-google-calendar-and-gogol.org
@@ -1,6 +1,6 @@
 ---
 title: "calendorg: Google Calendar and Org mode synchronisation"
-keywords: haskell
+tags: haskell
 description: Building a tool for Google Calendar and Org mode synchronisation
 ---
 
