--- a/static/posts/2015-02-04-canonical-path-v0.3.0.0.org
+++ b/static/posts/2015-02-04-canonical-path-v0.3.0.0.org
@@ -1,6 +1,6 @@
 ---
 title: CanonicalPath v0.3.0.0
-keywords: haskell, release
+tags: haskell, release
 description: Announcement of the third major version of CanonicalPath
 ---
 
