--- a/static/posts/2017-06-09-deep-in-black-bashic.org
+++ b/static/posts/2017-06-09-deep-in-black-bashic.org
@@ -1,6 +1,6 @@
 ---
 title: Deep in the black bashic
-keywords: blog
+tags: blog
 description: Procrastination leads to no updates in this blog
 ---
 
