--- a/static/posts/2017-06-13-Fish-notify-me-when-you-finish.org
+++ b/static/posts/2017-06-13-Fish-notify-me-when-you-finish.org
@@ -1,6 +1,6 @@
 ---
 title: 'Fish: notify me when you finish'
-keywords: fish
+tags: fish
 description: Getting notifications when the command finishes in Fish
 ---
 
