--- a/static/posts/2018-10-07-flyspell-correct-v0.5.org
+++ b/static/posts/2018-10-07-flyspell-correct-v0.5.org
@@ -1,6 +1,6 @@
 ---
 title: flyspell-correct v0.5
-keywords: emacs, release
+tags: emacs, release
 description: Announcement of new version of flyspell-correct
 ---
 
