--- a/posts/2018-11-04-revisiting-eru.org
+++ b/posts/2018-11-04-revisiting-eru.org
@@ -249,11 +249,9 @@ good enough as an improvement, but we can do even better.
 
 Bash provides an ability to evaluate arbitrary code by using =eval=. Please note
 though, that =eval= is a bane of shell programming and should be avoided like
-leprosy.
-
-In general, it's okayish to use =eval= when you fully control what is passed to
-it. If you pass user input to =eval= then you have a problem, because now you
-need to deal with code injection.
+leprosy. In general, it's okayish to use =eval= when you fully control what is
+passed to it. If you pass user input to =eval= then you have a problem, because
+now you need to deal with code injection.
 
 We can use =eval= to get the value of a variable by a string.
 
@@ -267,18 +265,35 @@ We can use =eval= to get the value of a variable by a string.
   42
 #+END_SRC
 
+While this is good enough, it's possible to avoid =eval= in this particular
+case, when we just want to get the value of variable by name.
+
+#+begin_src bash
+  $ CUSTOM_VAR=42
+
+  $ echo '$CUSTOM_VAR'
+  $CUSTOM_VAR
+
+  $ CUSTOM_VAR_REF=CUSTOM_VAR
+
+  $ echo ${!CUSTOM_VAR_REF}
+  42
+
+#+end_src
+
+Though if you want to expand variables in arbitrary string (like,
+=$HOME/config.json=), you'll have to use =eval=.
+
 Right now we are passing two arguments to =theme_guard=: a guarding variable
 value and the name of a theme. But the code looks similar - the first one is
 prefixed with the =$= sign and is in uppercase, while the second one is in
-capital case.
-
-Since we are going to use =eval= it's easy to deal with a dollar sign. And =awk=
-comes to fix the case.
+capital case. In order to deal with case, we can use =awk=.
 
 #+BEGIN_SRC bash
   function theme_guard() {
     key=$(echo "$1" | awk '{print toupper($0)}')
-    guard=$(eval echo "\$$key")
+    local guard_ref="guard_$key"
+    guard="${!guard_ref}"
     if [[ "$ALL" = "true" || "$guard" = "true" ]]; then
       optional_theme "$1" # logging
       return 0
@@ -379,7 +394,8 @@ final version looks like it.
 
   function theme_guard() {
     key=$(echo "$1" | awk '{print tolower($0)}')
-    guard=$(eval echo "\$guard_$key")
+    local guard_ref="guard_$key"
+    guard="${!guard_ref}"
     if [[ "$ALL" = "true" || "$guard" = "true" ]]; then
       optional_theme "$1" # logging
       return 0
@@ -403,11 +419,9 @@ final version looks like it.
 #+END_SRC
 
 Just by extracting checks into separate function, by using =declare= to define
-variables and =eval= to read value of variables we highly improved initial code.
-Less redundancy, clearer intention and ability to scale in terms of themes.
-
-Even though we used =eval=, which can be questioned by many people, I think it's
-still a win situation.
+variables and variable indirection to read value of variables we highly improved
+initial code. Less redundancy, clearer intention and ability to scale in terms
+of themes.
 
 * Epilogue
 
