update tags and links between projects and posts

--- a/posts/2015-02-04-canonical-path-v0.3.0.0.org
+++ b/posts/2015-02-04-canonical-path-v0.3.0.0.org
@@ -1,6 +1,6 @@
 ---
 title: CanonicalPath v0.3.0.0
-tags: haskell, release
+tags: haskell, release, CanonicalPath
 description: Announcement of the third major version of CanonicalPath
 ---
 
