--- a/posts/2016-05-09-flyspell-correct-intro.org
+++ b/posts/2016-05-09-flyspell-correct-intro.org
@@ -1,6 +1,6 @@
 ---
 title: flyspell-correct
-tags: emacs, release
+tags: emacs, release, flyspell-correct
 description: Announcement of flyspell-correct package for Emacs
 ---
 
