--- a/posts/2016-06-22-flyspell-correct-0.1.org
+++ b/posts/2016-06-22-flyspell-correct-0.1.org
@@ -1,6 +1,6 @@
 ---
 title: flyspell-correct v0.1
-tags: emacs, release
+tags: emacs, release, flyspell-correct
 description: Announcement of new version of flyspell-correct
 ---
 
