--- a/posts/2017-06-11-Git-conditional-configurations.org
+++ b/posts/2017-06-11-Git-conditional-configurations.org
@@ -1,6 +1,6 @@
 ---
 title: 'Git: conditional configurations'
-tags: git
+tags: git, git-config-manager
 description: Two approaches of having different configurations in different repositories
 ---
 
