--- a/posts/2018-11-04-revisiting-eru.org
+++ b/posts/2018-11-04-revisiting-eru.org
@@ -1,6 +1,6 @@
 ---
 title: Revisiting Eru
-tags: shell
+tags: shell, environment
 description: Overview of my computer configuration maintenance system
 ---
 
