--- a/posts/2017-06-13-Fish-notify-me-when-you-finish.org
+++ b/posts/2017-06-13-Fish-notify-me-when-you-finish.org
@@ -1,6 +1,6 @@
 ---
 title: 'Fish: notify me when you finish'
-tags: fish
+tags: fish, environment
 description: Getting notifications when the command finishes in Fish
 ---
 
