--- a/posts/2018-10-13-gifify.org
+++ b/posts/2018-10-13-gifify.org
@@ -1,6 +1,6 @@
 ---
 title: High quality GIF from video
-tags: shell, ffmpeg, utils
+tags: shell, ffmpeg, utils, environment
 description: Tool for converting GIFs from video files
 ---
 
