--- a/posts/2019-12-29-flyspell-correct-v0.6.org
+++ b/posts/2019-12-29-flyspell-correct-v0.6.org
@@ -1,6 +1,6 @@
 ---
 title: flyspell-correct v0.6
-tags: emacs, release
+tags: emacs, release, flyspell-correct
 description: Announcement of new version of flyspell-correct
 ---
 
