--- a/projects/fancy-yank.org
+++ b/projects/fancy-yank.org
@@ -1,6 +1,7 @@
 ---
 languages: Emacs Lisp
 category: Emacs
+priority: 8
 ---
 
 Emacs plugin that allows to hook into yanking process by transforming the data.
