--- a/projects/homebrew-emacs-plus.org
+++ b/projects/homebrew-emacs-plus.org
@@ -2,6 +2,7 @@
 tag: emacs-plus
 languages: Ruby
 category: Emacs
+priority: 1
 ---
 
 Homebrew Emacs formula with sane defaults and nice experimental options.
