--- a/projects/CanonicalPath.org
+++ b/projects/CanonicalPath.org
@@ -2,6 +2,7 @@
 tag: CanonicalPath
 category: Haskell
 languages: Haskell
+priority: 3
 ---
 
 Safe helpers for accessing and modifying environment variables.
