--- a/projects/d12frosted.io.org
+++ b/projects/d12frosted.io.org
@@ -5,8 +5,11 @@ category: Special
 priority: 2
 ---
 
-Source code of this site. It is built using [[https://jaspervdj.be/hakyll/][Hakyll]] - a Haskell library for
-generating static sites. While my site is pretty simple, it has several
-interesting(?) parts. For example, json-configuration, projects, delayed posts
-that will become available somewhere at the date (easy to add support of time as
-well).
+Repository containing source code of this site. It is built using [[https://jaspervdj.be/hakyll/][Hakyll]] - a
+Haskell library for generating static sites. While my site is pretty simple,
+here are some things that you can grab:
+
+- projects listing which gets stargazers count from GitHub during build phase
+  (it's static site after all);
+- json-based configuration;
+- delayed posts.
