--- a/projects/environment.org
+++ b/projects/environment.org
@@ -5,6 +5,10 @@ category: Special
 priority: 1
 ---
 
-Huge repository containing configurations for the tools and applications I am
-using ([[https://www.gnu.org/software/emacs/][Emacs]], [[https://fishshell.com/][fish shell]], [[https://xmonad.org/][xmonad]] and others); different small utilities; and the
-script that setups my environment on any new machine which is called Eru.
+The repository I update the most - collection of configurations for various
+application and tools ([[https://www.gnu.org/software/emacs/][Emacs]], [[https://fishshell.com/][fish shell]], [[https://xmonad.org/][xmonad]] and others), small utilities
+and scripts.
+
+It is also home for Eru - script that I use to setup and maintain my
+environment. It takes care of fetching and updating repositories, packages,
+linking files, rebuilding xmonad etc.
